.config/waybar/style.css
@keyframes blink-warning {
  70% {
    color: @light;
  }

  to {
    color: @light;
    background-color: @warning;
  }
}

@keyframes blink-critical {
  70% {
    color: @light;
  }

  to {
    color: @light;
    background-color: @critical;
  }
}

/* -----------------------------------------------------------------------------
 * Styles
 * -------------------------------------------------------------------------- */

/* COLORS */

/* Nord */
@define-color bg #2E3440;
/*@define-color bg #353C4A;*/
@define-color light #D8DEE9;
/*@define-color dark @nord_dark_font;*/
@define-color warning #ebcb8b;
@define-color critical #BF616A;
/*@define-color mode #434C5E;*/
@define-color mode @critical;
/*@define-color workspaces @bg;*/
/*@define-color workspaces @nord_dark_font;*/
/*@define-color workspacesfocused #434C5E;*/
@define-color workspacesfocused #4C566A;
@define-color tray @workspacesfocused;
@define-color sound #EBCB8B;
@define-color network #5D7096;
@define-color memory #546484;
@define-color cpu #596A8D;
@define-color temp #4D5C78;
@define-color layout #5e81ac;
@define-color battery #88c0d0;
@define-color date #434C5E;
@define-color time #434C5E;
@define-color backlight #434C5E;
@define-color nord_bg #434C5E;
@define-color nord_bg_blue #546484;
@define-color nord_light #D8DEE9;
@define-color nord_light_font #D8DEE9;
@define-color nord_dark_font #434C5E;

/*
      //"1: main": "<span color=\"#D8DEE9\"></span>",
      //"2: browser": "<span color=\"#88C0D0\"></span>",
      //"3: media": "<span color=\"#A3BE8C\"></span>",
      //"4: term": "<span color=\"#D8DEE9\"></span>",
*/

/* Reset all styles */
* {
  border: none;
  border-radius: 3px;
  min-height: 0;
  margin: 0.2em 0.3em 0.2em 0.3em;
}

/* The whole bar */
#waybar {
  background: @bg;
  color: @light;
  font-family: "Source Code Pro", "Font Awesome 5 Pro";
  border-radius: 0;
  font-size: 12px;
  font-weight: bold;
}

/* Each module */
#battery,
#clock,
#cpu,
#custom-layout,
#memory,
#mode,
#network,
#pulseaudio,
#temperature,
#custom-alsa,
#custom-pacman,
#custom-weather,
#custom-gpu,
#tray,
#backlight,
#language,
#custom-cpugovernor {
  padding-left: 0.6em;
  padding-right: 0.6em;
}

/* Each module that should blink */
#mode,
#memory,
#temperature,
#battery {
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

/* Each critical module */
#memory.critical,
#cpu.critical,
#temperature.critical,
#battery.critical {
  color: @critical;
}

/* Each critical that should blink */
/*#mode,*/
#memory.critical,
#temperature.critical,
#battery.critical.discharging {
  animation-name: blink-critical;
  animation-duration: 1s;
}

/* Each warning */
#network.disconnected,
#memory.warning,
#cpu.warning,
#temperature.warning,
#battery.warning {
  background: @warning;
  color: @nord_dark_font;
}

/* Each warning that should blink */
#battery.warning.discharging {
  animation-name: blink-warning;
  animation-duration: 3s;
}

/* And now modules themselves in their respective order */

#mode {
  /* Shown current Sway mode (resize etc.) */
  color: @light;
  background: @mode;
}

/* Workspaces stuff */

/*.modules-center {*/
/*padding: 0;*/
/*margin: 0;*/
/*}*/

#workspaces {
  padding: 0;
  margin: 0;
  /*   color: #D8DEE9;
    margin-right: 10px;*/
}

#workspaces button {
  font-weight: bold; /* Somewhy the bar-wide setting is ignored*/
  color: #d8dee9;
  opacity: 1;
  background: none;
  font-size: 1em;
  padding: 0 0.4em;
  /*min-height: 20px;*/
}

#workspaces button.focused {
  background: @workspacesfocused;
  color: #d8dee9;
  opacity: 1;
}

#workspaces button.urgent {
  border-color: #c9545d;
  color: #c9545d;
  opacity: 1;
}

#window {
  margin: 0 16px;
  /*margin-right: 16px;*/
  /*margin-left: 16px;*/
  font-weight: normal;
}
#bluetooth {
  background: @nord_bg_blue;
  /*font-size: 1.2em;*/
  /*font-weight: bold;*/
  padding: 0 0.6em;
}
#custom-gpu {
  background: @nord_bg;
  font-weight: bold;
  padding: 0 0.6em;
}
#custom-weather {
  background: @mode;
  font-weight: bold;
  padding: 0 0.6em;
}
#custom-pacman {
  background: @nord_light;
  color: @nord_dark_font;
  font-weight: bold;
  padding: 0 0.6em;
}
#custom-scratchpad-indicator {
  background: @nord_light;
  color: @nord_dark_font;
  font-weight: bold;
  padding: 0 0.6em;
}
#idle_inhibitor {
  background: @nord_bg;
  /*font-size: 1.6em;*/
  font-weight: bold;
  padding: 0 0.6em;
}
#custom-alsa {
  background: @sound;
}

#network {
  background: @nord_bg_blue;
}

#memory {
  background: @memory;
}

#cpu {
  background: @nord_bg;
  color: #d8dee9;
}
#cpu.critical {
  color: @nord_dark_font;
}
#language {
  background: @nord_bg_blue;
  color: #d8dee9;
  padding: 0 0.4em;
}
#custom-cpugovernor {
  background-color: @nord_light;
  color: @nord_dark_font;
}
#custom-cpugovernor.perf {
}
#temperature {
  background-color: @nord_bg;
  color: #d8dee9;
}
#temperature.critical {
  background: @critical;
}
#custom-layout {
  background: @layout;
}

#battery {
  background: @battery;
  color: @bg;
}

#backlight {
  background: @backlight;
}

#clock {
  background: @nord_bg_blue;
  color: #d8dee9;
}
#clock.date {
  background: @date;
}

#clock.time {
  background: @mode;
}

#pulseaudio {
  /* Unsused but kept for those who needs it */
  background: @nord_bg_blue;
  color: #d8dee9;
}

#pulseaudio.muted {
  background: #bf616a;
  /*color: #bf616a;*/
  /* No styles */
}
#pulseaudio.source-muted {
  background: #d08770;
  color: #d8dee9;
  /* No styles */
}
#tray {
  background: #434c5e;
}

